--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "watch:css": "postcss -w src/styles/tailwind.css -o src/styles/output.css"
   },
   "dependencies": {
     "@craco/craco": "^6.3.0",
@@ -17,14 +18,15 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "firebase": "^8.6.8",
+    "postcss-cli": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,8 +46,11 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
+    "@types/react-router-dom": "^5.3.0",
     "autoprefixer": "9",
-    "postcss": "7",
+    "postcss": "^8.3.7",
+    "prettier": "^2.4.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
