--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "@tailwindcss/jit": "^0.1.18",
     "@types/react-router-dom": "^5.3.0",
     "autoprefixer": "9",
-    "postcss": "^8.3.7",
+    "postcss": "7.0.35",
     "prettier": "^2.4.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
-  }
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"  }
 }
