--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-cli": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
@@ -51,5 +52,6 @@
     "autoprefixer": "9",
     "postcss": "7.0.35",
     "prettier": "^2.4.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"  }
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+  }
 }
